# lunas

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  flake.nix
include/: about.h  base.h  cliargs.h  config.h  config_handler.h  config_manager.h  copy.h  cppfs.h  exclude.h  file_types.h  fs.h  fs_local.h  fs_remote.h  init.h  local_attrs.h  local_copy.h  local_to_local.h  local_to_remote.h  log.h  luco.h  os.h  ownership.h  partition.h  path_parsing.h  permissions.h  progress.h  raii_fstream.h  raii_sftp.h  remote_attrs.h  remote_copy.h  remote_session.h  remote_to_local.h  remote_to_remote.h  resume.h  size_units.h  utimes.h
man/: lunas.1
mod/: lunas.cpp
mod/about/: about.cpp
mod/attributes/: attributes.cpp  file_type.cpp  ownership.cpp  permissions.cpp  space_info.cpp  utimes.cpp
mod/config/: config.cpp  filler.cpp  options.cpp  options_functions.cpp
mod/config/cliarg/: cliarg.cpp
mod/config/file/: config_file.cpp  config_manager.cpp  luco.cpp
mod/content/: content.cpp
mod/cppfs/: cppfs.cpp
mod/error/: error.cpp
mod/exclude/: exclude.cpp
mod/file/: attributes.cpp  directory.cpp  file.cpp  operations.cpp  partition.cpp
mod/file_table/: file_table.cpp
mod/file_types/: file_types.cpp
mod/filter/: allow.cpp  exclude.cpp  filter.cpp  find.cpp
mod/hooks/: cmd.cpp  hook.cpp  hooks.cpp  parser.cpp  prehook.cpp  types.cpp
mod/input_path/: input_path.cpp
mod/path/: path.cpp
mod/presync/: misc.cpp  presync.cpp
mod/presync/fill_tree/: fill_tree.cpp  local.cpp  remote.cpp  types.cpp
mod/sftp/: attributes.cpp  dir.cpp  error.cpp  file.cpp  limits.cpp  log.cpp  parition.cpp  path.cpp  raii.cpp  sftp.cpp  ssh.cpp
mod/stats/: stats.cpp
mod/stdout/: stdout.cpp
mod/sync/: checks.cpp  multi_source.cpp  remove.cpp  stdout.cpp  sync.cpp  types.cpp  updating.cpp
mod/sync/copy/: copy.cpp  local_attributes.cpp  local_copy.cpp  local_to_local.cpp  local_to_remote.cpp  misc.cpp  remote_attributes.cpp  remote_copy.cpp  remote_to_local.cpp  remote_to_remote.cpp
mod/terminal/: terminal.cpp
src/: base.cpp  cliargs.cpp  config_handler.cpp  config_manager.cpp  copy.cpp  cppfs.cpp  exclude.cpp  file_types.cpp  fs.cpp  fs_local.cpp  fs_remote.cpp  init.cpp  local_attrs.cpp  local_copy.cpp  local_to_local.cpp  local_to_remote.cpp  log.cpp  luco.cpp  main.cpp  os.cpp  ownership.cpp  partition.cpp  path_parsing.cpp  permissions.cpp  progress.cpp  raii_fstream.cpp  raii_sftp.cpp  remote_attrs.cpp  remote_copy.cpp  remote_session.cpp  remote_to_local.cpp  remote_to_remote.cpp  resume.cpp  size_units.cpp  term.cpp  utimes.cpp
test/: Makefile  clean.go  main.go
test/attributes/: ownership.go  utimes.go
test/cmd/: cmd.go
test/hashing/: hash.go
test/tree/: tree1.go
test/verify/: verify.go
